[tool.poetry]
name = "commonroad-reactive-planner"
version = "2024.1"
description = "CommonRoad Reactive Planner: Sampling-based Frenet Planner"
authors = ["Cyber-Physical Systems Group, Technical University of Munich <commonroad@lists.lrz.de>"]
license = "BSD"
readme = "README.md"
homepage = "https://commonroad.in.tum.de"
keywords= ["autonomous", "automated", "vehicles", "driving", "motion", "planning"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux"
]

packages = [{include = "commonroad_rp"}]

[tool.poetry.urls]
Source = "https://gitlab.lrz.de/tum-cps/commonroad-reactive-planner"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

matplotlib = ">=2.2.2"
networkx = ">=2.2"
numpy = ">=1.22"
methodtools = "^0.4.5"
omegaconf = ">=2.1.1"
scipy = ">=1.5.2"
imageio = ">=2.13.5"
triangle = ">=20230923"

commonroad-route-planner = ">=2024.1.1"
commonroad-io = ">=2023.2"
commonroad-drivability-checker = ">=2024.1"
commonroad_vehicle_models = ">=3.0.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=2.2.1"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = ">=6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
